syntax = "proto2";

package com.dashaasavel.mailservice.message;

option java_multiple_files = true;

message WelcomeMessage {
  optional UserInfo userInfo = 1;
}

message GoodByeMessage {
  optional UserInfo userInfo = 1;
  optional int32 userId = 2;
}

message ConfirmationMessage {
  optional UserInfo userInfo = 1;
  optional string token = 2;
  optional int32 minutes = 3;
  optional string url = 4;
}

message UserInfo {
  optional string username = 1;
  optional string firstName = 2;
}